<resources>
    <string name="app_name" translatable="false">Go Corona</string>
    <string name="sign_up">Don\'t have an account ? <u>Sign Up</u></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Health_News">Health News</string>
    <string name="Covid_News">Covid Stats</string>
    <string name="Find_Hospitals">Find Hospitals</string>
    <string name="Settings">Settings</string>
    <string name="Search">Search</string>
    <string name="Total">Total Cases</string>
    <string name="Hospital">Hospitals</string>
    <string name="Covid_Symptoms">Covid Symptoms</string>
    <string name="Symptoms_line">Common Symptoms of Covid-19 includes respiratory symptoms,fever,cough,shortness of breath,
     etc. In more severe cases, the infection can cause severe respiratory syndromes,kidney failure and other major causes.</string>
    <string name="Assessment_dialog">Your Asssessment is going on.Do you want to cancel your self assessment?</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="assessment_cancelled">Self Assessment Cancelled</string>
    <string name="contact_us">Contact Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_intro">While using GoCorona App, some of the information that is personal could be collected from the resources about you. We will surely protected in order to secure the app while safeguarding your privacy as per which the details that is the personal information of the user that has been collected will be security kept. During the registration process there are some terms and policies for the privacy that have to accepted by the user. The use of the app signifies that the user has accepted the terms and conditions of the app.</string>
    <string name="info_collected_name">1.Information Collected And Manner of collection</string>
    <string name="info_collected">a. While registering on the app some of the information that will be collected and security kept on the server is as follows name, phone number, age,profession etc.\n b. The App will ask for the access to your contacts in case user have to call ambulance for emergency purposes.\n
                                   c. The App will use your current location as to provide you the location of the nearby hospitals.\n d. There is a need to complete a self assessment test on the app that will collect the location data as well as uploaded on the server along with the results of the self assessment that would judge whether a person is suffering from covid or not.\n</string>
    <string name="rights_heading">2.Rights</string>
    <string name="rights">a. As a registered user, you have the right to access your profile at any time to add, remove or modify any registration information that you have supplied.\n
       b. You cannot manage the communications that you receive from us or how you receive them.\n</string>
    <string name="data_security_heading">3. Data Security</string>
    <string name="data_security">The App is equipped with standard security features to protect the confidentiality and security of your information. Personal information provided at the time of registration is encrypted before being uploaded to the cloud where it is stored in a secure encrypted server. Personal information that is stored in the Apps of other registered users that you come in contact with is securely encrypted and are incapable of being accessed by such user.</string>

    <string name="terms_service">Terms of Service</string>
    <string name="terms_intro">These terms of service (Terms) govern your use of the Go Corona application for Android App and the services provided thereunder. Please read these terms and conditions carefully before you use the App. In order to continue using the App,
        you will be required to accept the revised Terms.</string>
    <string name="service_overview_heading">1. SERVICE OVERVIEW</string>
    <string name="service_overview">The App is part of a service designed to (i) enable registered users provide useful information in relation to COVID-19,\n
        (ii) to allow users to access convenience information and statistics in relation to COVID-19, \n
        (iii)to help people locate all the nearby hospitals within their range\n (iv) to display beds available in hospitals. When the App is installed on your Android device, it requires access to users contacts and location as mentioned in the Privacy Policy.intervention. \n
        (v) The App also allows users to conduct a self-assessment test to assess whether their symptoms combined with other relevant factors affects their risk of being infected.\n</string>
    <string name="privacy_heading">2. PRIVACY</string>
    <string name="privacy">You hereby consent to the collection and use of your personal information for the provision of the Services. The details of the personal information collected and the manner in which it is collected and by whom as
        well as the purposes for which it will be used is more fully set out in our privacy policy which is available here.</string>
    <string name="disruption_heading">3.DISRUPTION</string>
    <string name="disruption">You agree that you have no expectation of, or right to permanent and uninterrupted access to the Services. While the Services are intended to be accessible to you from everywhere in India on a 24x7 basis, from time to time and without prior notice of downtime, access to the App or the Services or to any part thereof may be suspended on either
        a temporary or permanent basis and either with respect to all or a certain class of users.</string>
    <string name="defect_heading">4. DEFECT REPORTING</string>
    <string name="defect">You can report any defects or bugs in the App or the Services to <b>gocorona2021saviour@gmail.com.</b> Our team will make every endeavour to address all
        reported bugs and defects.</string>


    <string-array name="choose_state">
        <item>Maharashtra</item>
        <item>Tamil Nadu</item>
        <item>Karnataka</item>
        <item>Punjab</item>
        <item>Gujarat</item>
        <item>Kerala</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
        <item>Odisha</item>
        <item>Andhra Pradesh</item>
        <item>Delhi</item>
        <item>Telangana</item>
        <item>Rajasthan</item>
        <item>Haryana</item>
        <item>Chhattisgarh</item>
        <item>Assam</item>
        <item>Madhya Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Uttarakhand</item>
        <item>Goa</item>
        <item>Jharkhand</item>
        <item>Himachal Pradesh</item>
        <item>Puducherry</item>
        <item>Tripura</item>
        <item>Manipur</item>
        <item>Chandigarh</item>
        <item>Arunachal Pradesh</item>
        <item>Meghalaya</item>
        <item>Nagaland</item>
        <item>Ladakh</item>
        <item>Sikkim</item>
        <item>Andaman and Nicobar Islands</item>
        <item>Mizoram</item>
        <item>Daman and Diu</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Lakshadweep</item>
    </string-array>

    <string-array name="symptoms">
        <item>Fever</item>
        <item>Dry Cough</item>
        <item>Fatigue</item>
        <item>Shortness of Breath</item>
        <item>Muscle Pain</item>
        <item>Sore Throat</item>
        <item>Headache</item>
        <item>Chills</item>
        <item>Nausea or Vomiting</item>
        <item>Nasal Congestion</item>
        <item>Diarrhea</item>
        <item>Conjunctival Congesion</item>
    </string-array>

    <string-array name="questions">
        <item>Are you experiencing any of the following symptoms</item>
        <item>Have you ever had any of the following</item>
        <item>Have you done any of the following in the last 28-45 days</item>
        <item>Have you avoided any of the below in public places</item>
    </string-array>

    <string-array name="optionAList">
        <item>Fever or Muscle Pain</item>
        <item>Diabetes</item>
        <item>Visited Internationally</item>
        <item>Wearing Masks</item>
    </string-array>

    <string-array name="optionBList">
        <item>Dry Cough or lack of taste</item>
        <item>Lung Disease</item>
        <item>Met anyone who came from foreign country</item>
        <item>Hand Sanitization</item>
    </string-array>

    <string-array name="optionCList">
        <item>Shortness of Breath</item>
        <item>Heart Disease</item>
        <item>Met anyone who later on gets COVID positive</item>
        <item>Social Distancing</item>
    </string-array>

    <string-array name="optionDList">
        <item>None of the above</item>
        <item>None of the above</item>
        <item>None of the above</item>
        <item>No</item>
    </string-array>

    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="self_assessment_test">Self Assessment Test</string>

    <string name="take_my_assessment">Take Assessment now</string>
    <string name="think_you_are_affected">Feeling any of the above symptoms?</string>

    <string name="your_assessment_result">Your Assessment Result</string>
    <string name="safe_result">Your infection risk is low.We recommend you to stay at home to avoid any chance of getting Novel Coronavirus.\n Retake self Assessment.If you develop any symptoms
        or come in contact with any of the COVID-19 patient</string>
    <string name="unsafe_result">According to your self assessment test, you may have been infected by Novel Coronavirus.
                    So go to the hospital immediately following all the necessary measures and get it tested.\n
                    Before your result come, keep yourself isolated and dont go outside.</string>
    <string name="danger_result">According to your self assessment test, it is highly sure that you have been infected
                    by Novel Coronavirus. So isolate yourself and go to nearby hosptal and get it tested.\n
                    Till then Avoid contact and follow all the precautions and measures which you will be given by the hospital</string>

    <string name="starting_self_assessment">Starting Self Assessment...</string>
    <string name="Disclaimer1">Please Give Correct Answers</string>
    <string name="Disclaimer2">Be a responsible citizen and provide accurate answers in this assessment test.
        This test will help you to know your current condition.</string>
    <string name="start_my_assessment">Start my Assessment</string>

    <string name="choose_a_state">Choose a State</string>
    <string name="choose_lang">Choose a Language</string>
    <string name="or_text">OR</string>

    <string name="call_ambulance">Call Ambulance</string>
    <!-- TODO: Remove or change this placeholder text -->

</resources>