<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Views.Main.CovidSymptomsFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Symptoms_line"
        android:layout_margin="5dp"
        android:paddingLeft="6dp"
        android:textSize="16dp"
        android:textColor="#323030"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="4dp"
        android:id="@+id/symptoms_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:background="@color/colorBlack"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:textSize="16dp"
        android:padding="8dp"
        android:text="@string/think_you_are_affected" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

    <Button
        android:id="@+id/take_Assessment"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginLeft="12dp"
        android:background="@color/colorRed"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:textSize="16dp"
        android:padding="8dp"
        android:textAllCaps="false"
        android:text="@string/take_my_assessment" />

     <ImageButton
         android:id="@id/take_Assessment"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:background="@color/colorRed"
         android:src="@drawable/ic_baseline_arrow_right_alt_24"
         android:paddingLeft="120dp"/>

    </LinearLayout>
    </LinearLayout>


</ScrollView>